create hodor actuator agent dist and update start.sh
(cherry picked from commit d26e1b78ad5b7ad932d2e16338da7450b2b67f51)